--- a/Templates/HSEQ.html
+++ b/Templates/HSEQ.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="hseq-video">
                     <iframe 
-                    src="../Static/Videos/Full services HSEQ.mp4" 
+                    src="https://youtu.be/sFY0CvHC29s" 
                     title="Video HSEQ"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
