--- a/Templates/HSEQ.html
+++ b/Templates/HSEQ.html
@@ -90,12 +90,13 @@
                 </div>
                 <div class="hseq-video">
                     <iframe 
-                    src="https://youtu.be/sFY0CvHC29s" 
-                    title="Video HSEQ"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    src="https://www.youtube.com/embed/BWEsYqKLD7U?si=pEb5Cuz3pwumDr6Z" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
                     allowfullscreen>
-                    </iframe>
+                </iframe>
                 </div>
             </div>
         </div>
