--- a/Templates/Servicios/Trailers2.html
+++ b/Templates/Servicios/Trailers2.html
@@ -27,11 +27,12 @@
                 
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
-                        <li><a href="/index.html" class="nav-link"><span>Inicio</span></a></li>
-                        <li><a href="/index.html" class="nav-link"><span>Nosotros</span></a></li>
-                        <li><a href="/index.html" class="nav-link"><span>Servicios</span></a></li>
-                        <li><a href="/index.html" class="nav-link"><span>Contacto</span></a></li>
-                        <li><a href="/blog.html" class="nav-link"><span>Blog</span></a></li>
+                        <li><a href="../../index.html" class="nav-link"><span>Inicio</span></a></li>
+                        <li><a href="../../index.html" class="nav-link"><span>Nosotros</span></a></li>
+                        <li><a href="../../index.html" class="nav-link"><span>Servicios</span></a></li>
+                        <li><a href="../../index.html" class="nav-link"><span>Contacto</span></a></li>
+                        <li><a href="../../blog.html" class="nav-link"><span>Blog</span></a></li>
+
 
 
                         <li class="nav-login-mobile">
@@ -98,11 +99,11 @@
             </div>
 
             <div class="columna-media">
-                <img id="imagen-principal" src="../../../Static/Images/Canasta/render1.jpg" alt="Producto" class="imagen-principal">
+                <img id="imagen-principal" src="../../../../Static/Images/Canasta/render1.jpg" alt="Producto" class="imagen-principal">
                 <div class="miniaturas">
-                    <img src="../../../Static/Images/Canasta/render1.jpg" class="mini activa" alt="Canasta para Tubería Vista 1"> 
-                    <img src="../../../Static/Images/Canasta/render2.jpg" class="mini" alt="Canasta para Tubería Vista 2">
-                    <img src="../../../Static/Images/Canasta/render3.jpg" class="mini" alt="Canasta para Tubería Vista 3">
+                    <img src="../../../../Static/Images/Canasta/render1.jpg" class="mini activa" alt="Canasta para Tubería Vista 1"> 
+                    <img src="../../../../Static/Images/Canasta/render2.jpg" class="mini" alt="Canasta para Tubería Vista 2">
+                    <img src="../../../../Static/Images/Canasta/render3.jpg" class="mini" alt="Canasta para Tubería Vista 3">
                 </div>
             </div>
         </div>
