--- a/Static/Styles/styles.css
+++ b/Static/Styles/styles.css
@@ -264,15 +264,15 @@ a {
 
 
 .bg1 {
-    background-image: url('../../Static/Images/FULL-IMG1-CARRUSEL.png');
+    background-image: url('../../Static/Images/FULL-IMG3-CARRUSEL.webp');
 }
 
 .bg2 {
-    background-image: url('../../Static/Images/FULL-IMG2-CARRUSEL.png');
+    background-image: url('../../Static/Images/FULL-IMG2-CARRUSEL.jpg');
 }
 
 .bg3 {
-    background-image: url('../../Static/Images/FULL-IMG3-CARRUSEL.jpg');
+    background-image: url('../../Static/Images/FULL-IMG1-CARRUSEL.jpg');
 }
 
 .hero-background-wrapper {
