--- a/Templates/Servicios/Trailers3.html
+++ b/Templates/Servicios/Trailers3.html
@@ -100,11 +100,11 @@
             </div>
 
             <div class="columna-media">
-                <img id="imagen-principal" src="../../../../Static/Images/Cama/Render1.jpg" alt="Cama Baja Cuello Hidráulico" class="imagen-principal">
+                <img id="imagen-principal" src="../../Static/Images/Cama/Render1.jpg" alt="Cama Baja Cuello Hidráulico" class="imagen-principal">
                 <div class="miniaturas">
-                    <img id="imagen-principal" src="../../../../Static/Images/Cama/Render1.jpg" class="mini activa" alt="Cama Baja Cuello Hidráulico Vista 1">
-                    <img id="imagen-principal" src="../../../../Static/Images/Cama/Render2.jpg" class="mini" alt="Cama Baja Cuello Hidráulico Vista 2">
-                    <img id="imagen-principal" src="../../../../Static/Images/Cama/Render3.jpg" class="mini" alt="Cama Baja Cuello Hidráulico Vista 3">
+                    <img id="imagen-principal" src="../../Static/Images/Cama/Render1.jpg" class="mini activa" alt="Cama Baja Cuello Hidráulico Vista 1">
+                    <img id="imagen-principal" src="../../Static/Images/Cama/Render2.jpg" class="mini" alt="Cama Baja Cuello Hidráulico Vista 2">
+                    <img id="imagen-principal" src="../../Static/Images/Cama/Render3.jpg" class="mini" alt="Cama Baja Cuello Hidráulico Vista 3">
                 </div>
             </div>
         </div>
