--- a/Templates/Servicios/Trailers6.html
+++ b/Templates/Servicios/Trailers6.html
@@ -101,11 +101,11 @@
             </div>
 
             <div class="columna-media">
-                <img id="imagen-principal" src="../../../../Static/Images/Cama Baja/Render1.jpg" alt="Remolque Cama Baja de Tiro Full Services" class="imagen-principal">
+                <img id="imagen-principal" src="../../Static/Images/Cama Baja/Render1.jpg" alt="Remolque Cama Baja de Tiro Full Services" class="imagen-principal">
                 <div class="miniaturas">
-                    <img id="imagen-principal" src="../../../../Static/Images/Cama Baja/Render1.jpg" alt="Remolque Cama Baja de Tiro Vista 2" class="mini activa">
-                    <img id="imagen-principal" src="../../../../Static/Images/Cama Baja/Render2.jpg" alt="Remolque Cama Baja de Tiro Vista 3" class="mini">
-                    <img id="imagen-principal" src="../../../../Static/Images/Cama Baja/Render3.jpg" alt="Remolque Cama Baja de Tiro Vista 4" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Cama Baja/Render1.jpg" alt="Remolque Cama Baja de Tiro Vista 2" class="mini activa">
+                    <img id="imagen-principal" src="../../Static/Images/Cama Baja/Render2.jpg" alt="Remolque Cama Baja de Tiro Vista 3" class="mini">
+                    <img id="imagen-principal" src="../../Static/Images/Cama Baja/Render3.jpg" alt="Remolque Cama Baja de Tiro Vista 4" class="mini">
                 </div>
             </div>
         </div>
