--- a/Static/Styles/styles.css
+++ b/Static/Styles/styles.css
@@ -699,6 +699,17 @@ section {
     padding-bottom: 0.5rem;
 }
 
+#modalBody {
+    flex: 1;
+    overflow-y: scroll;
+    scrollbar-width: none; 
+    -ms-overflow-style: none; 
+}
+
+#modalBody::-webkit-scrollbar {
+    display: none; 
+}
+
 .modal-content::-webkit-scrollbar {
     width: 0px; 
 }
@@ -1570,4 +1581,29 @@ section {
     color: var(--color-text-secondary);
     font-size: 0.95rem;
     vertical-align: middle;
+}
+
+html {
+    scrollbar-width: thin;             
+    scrollbar-color: #C80000 transparent;   
+}
+
+::-webkit-scrollbar {
+    width: 5px;               
+    height: 5px;        
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;       
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #9d060d;       
+    border-radius: 10px;
+    transition: background 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--color-primary);       
 }
