--- a/Static/Styles/styles.css
+++ b/Static/Styles/styles.css
@@ -1582,3 +1582,20 @@ section {
     font-size: 0.95rem;
     vertical-align: middle;
 }
+
+::selection {
+    background-color: var(--color-primary);
+    color: #fff;
+}
+
+.img-protect-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.img-protect-overlay {
+    position: absolute;
+    inset: 0;
+    cursor: default;
+    background: rgba(255,255,255,0);
+}
