--- a/Templates/HSEQ.html
+++ b/Templates/HSEQ.html
@@ -89,13 +89,13 @@
                     </p>
                 </div>
                 <div class="hseq-video">
-                    <iframe 
-                    src="https://www.youtube.com/embed/BWEsYqKLD7U?si=pEb5Cuz3pwumDr6Z" 
-                    title="YouTube video player" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    referrerpolicy="strict-origin-when-cross-origin" 
-                    allowfullscreen>
+                <iframe 
+                src="https://www.youtube.com/embed/sFY0CvHC29s?si=nzEcNpuj76t8VGq2" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
                 </iframe>
                 </div>
             </div>
