--- a/Templates/Servicios/Trailers6.html
+++ b/Templates/Servicios/Trailers6.html
@@ -29,9 +29,9 @@
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
                         <li><a href="../../index.html" class="nav-link"><span>Inicio</span></a></li>
-                        <li><a href="../../index.html" class="nav-link"><span>Nosotros</span></a></li>
-                        <li><a href="../../index.html" class="nav-link"><span>Servicios</span></a></li>
-                        <li><a href="../../index.html" class="nav-link"><span>Contacto</span></a></li>
+                        <li><a href="../../index.html#nosotros" class="nav-link"><span>Nosotros</span></a></li>
+                        <li><a href="../../index.html#servicios" class="nav-link"><span>Servicios</span></a></li>
+                        <li><a href="../../index.html#contacto" class="nav-link"><span>Contacto</span></a></li>
                         <li><a href="../../blog.html" class="nav-link"><span>Blog</span></a></li>
 
 
@@ -42,9 +42,10 @@
                 </nav>
 
                 <div class="header-actions">
-                    <button class="translate-btn" aria-label="Traducir">
-                        <a href="../../Translate/Servicios/enServicio6.html"><i class="fa-solid fa-globe"></i></a>
-                    </button>
+                    <a href="../../Translate/Servicios/enServicio6.html" class="translate-btn" aria-label="Traducir">
+                        <i class="fa-solid fa-globe"></i>
+                        <span>ES</span>
+                    </a>
 
                     <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
                         <svg class="sun-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -166,7 +167,7 @@
                         <a href="https://www.facebook.com/fullservicesingenieria/?ref=pages_you_manage" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/fullservicessas/" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/company/full-services-sas" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="https://wa.link/2ogans" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://wa.link/mi5n03" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="https://www.youtube.com/channel/UCM24jb9IC27P_QPR2GwM6fw"><i class="fa-brands fa-youtube"></i></a>
                         <a href="https://beacons.ai/fullservicesingenieria"><i class="fa-solid fa-link"></i></a>
                     </div>
@@ -175,20 +176,20 @@
                 <div class="footer-col">
                     <h4 class="footer-heading">Servicios</h4>
                     <ul class="footer-links">
-                        <li><a href="../../index.html">Work-Over</a></li>
-                        <li><a href="../../index.html">Trailers</a></li>
-                        <li><a href="../../index.html">Obras Civiles</a></li>
-                        <li><a href="../../index.html">Arquitectura</a></li>
-                        <li><a href="../../index.html">Transporte</a></li>
-                        <li><a href="../../index.html">Servicios Industriales</a></li>
+                        <li><a href="../../index.html#servicios">Work-Over</a></li>
+                        <li><a href="../../index.html#servicios">Trailers</a></li>
+                        <li><a href="../../index.html#servicios">Obras Civiles</a></li>
+                        <li><a href="../../index.html#servicios">Arquitectura</a></li>
+                        <li><a href="../../index.html#servicios">Transporte</a></li>
+                        <li><a href="../../index.html#servicios">Servicios Industriales</a></li>
                     </ul>
                 </div>
                 
                 <div class="footer-col">
                     <h4 class="footer-heading">Empresa</h4>
                     <ul class="footer-links">
-                        <li><a href="../../index.html">Sobre Nosotros</a></li>
-                        <li><a href="../../index.html">Contacto</a></li>
+                        <li><a href="../../index.html#nosotros">Sobre Nosotros</a></li>
+                        <li><a href="../../index.html#contacto">Contacto</a></li>
                         <li><a href="../../Templates/formwork.html">Trabaja con Nosotros</a></li>
                         <li><a href="../../blog.html">Blog</a></li>
                         <li><a href="../../Templates/HSEQ.html">HSEQ</a></li>
