--- a/Static/Styles/styles.css
+++ b/Static/Styles/styles.css
@@ -210,6 +210,7 @@ a {
     cursor: pointer;
     font-weight: 600;
     font-size: 0.9rem;
+    text-decoration: none;
     transition: background 0.3s ease, color 0.3s ease, transform 0.2s ease;
 }
 
@@ -222,6 +223,7 @@ a {
 .translate-btn i {
     font-size: 1rem;
 }
+
 
 .btn-login {
     background-color: var(--color-primary);
