--- a/Templates/Servicios/Trailers2.html
+++ b/Templates/Servicios/Trailers2.html
@@ -28,23 +28,23 @@
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
                         <li><a href="../../index.html" class="nav-link"><span>Inicio</span></a></li>
-                        <li><a href="../../index.html" class="nav-link"><span>Nosotros</span></a></li>
-                        <li><a href="../../index.html" class="nav-link"><span>Servicios</span></a></li>
-                        <li><a href="../../index.html" class="nav-link"><span>Contacto</span></a></li>
+                        <li><a href="../../index.html#nosotros" class="nav-link"><span>Nosotros</span></a></li>
+                        <li><a href="../../index.html#servicios" class="nav-link"><span>Servicios</span></a></li>
+                        <li><a href="../../index.html#contacto" class="nav-link"><span>Contacto</span></a></li>
                         <li><a href="../../blog.html" class="nav-link"><span>Blog</span></a></li>
 
 
-
                         <li class="nav-login-mobile">
-                            <a href="https://login.microsoftonline.com/common/oauth2/v2.0/authorize?client_id=10fa57ef-4895-4ab2-872c-8c3613d4f7fb&redirect_uri=https%3A%2F%2Fwww.microsoft.com%2Fcascadeauth%2Faccount%2Fsignin-oidc&response_type=code&prompt=login&scope=openid%20profile%20offline_access&code_challenge=1YdYcMgD-KsQtfvXJJ9lDfdO1nOlA6DCDR5K-V6GJ5E&code_challenge_method=S256&response_mode=form_post&nonce=638961383103203040.NDZlYmRmNjUtNTlhMS00ODYxLThlYjAtZjg2OGY5NDQ1NzhkNDkwYzJiOWUtNDE0YS00NGQ2LWI2ODQtZjVmMDhlYmI5ZjI2&client_info=1&x-client-brkrver=IDWeb.3.9.2.0&lc=9226&claims=%7B%22compact%22%3A%7B%22name%22%3A%7B%22essential%22%3Atrue%7D%7D%7D&state=CfDJ8LpX7AEm64lJqvovzonWFb4sN8kdpbXK5t26RPsQ1gd0ql-TqVH4wrwYosSA47tqTjXg7rkw7fjCU8kKpx1e-HGLi3d_TIxUAR_I7LRAX1q3mmz6S-sH1gBMK46nff6z8UUzYezbp5wnfr1kRgDBJ82eCasZaEz3FrW8ak1Kr4hedaQney8tk1oJCBj2MpCi-90fLtiFLswvZUUkVVM-9ZaUwmfBczurckmwUu0CJPqQoi-xOEE_j6WwF7xLgbTyixHFaT6hx43GNW7oNIAIK2oMLdAAIB-kpVYEKrcz9PwIek6S8pNkLx2GPHUUyPfV_jHJdPNJVxqzblslmbVUMMxzJ8zaS4lRndd_vUpoH0WO9TADsrRBAUMHy7Xz2JPq7w79foOgfEK-YKG9D2q0WPi-OLWoXWmejGnDSwq4Ait3h9wGm600oZjZjAtC-J_r3MjQub7vn0G3TFo8te3DE5MqYwUjr-TcZtDTCYSxzuZyw6QgvkwtXNzbwbFzZTJklsxJQ1OVWPkhRE4OBKZw0tAjg6SO27G_EvlS3SfLmphqGcYGxMOfej9q-y8Z6cdvIuXxocqVtSaLr-L8uNjUsDzVHlCs23WLL6oBEnzL93r6&x-client-SKU=ID_NET6_0&x-client-ver=8.11.0.0&sso_reload=true" class="btn-login"><i class="fa-solid fa-user"></i></a>
+                            <a href="https://login.microsoftonline.com/common/oauth2/v2.0/authorize?client_id=10fa57ef-4895-4ab2-872c-8c3613d4f7fb&redirect_uri=https%3A%2F%2Fwww.microsoft.com%2Fcascadeauth%2Faccount%2Fsignin-oidc&response_type=code&prompt=login&scope=openid%20profile%20offline_access&code_challenge=1YdYcMgD-KsQtfvXJJ9lDfdO1nOlA6DCDR5K-V6GJ5E&code_challenge_method=S256&response_mode=form_post&nonce=638961383103203040.NDZlYmRmNjUtNTlhMS00ODYxLThlYjAtZjg2OGY5NDQ1NzhkNDkwYzJiOWUtNDE0YS00NGQ2LWI2ODQtZjVmMDhlYmI5ZjI2&client_info=1&x-client-brkrver=IDWeb.3.9.2.0&lc=9226&claims=%7B%22compact%22%3A%7B%22name%22%3A%7B%22essential%22%3Atrue%7D%7D%7D&state=CfDJ8LpX7AEm64lJqvovzonWFb4sN8kdpbXK5t26RPsQ1gd0ql-TqVH4wrwYosSA47tqTjXg7rkw7fjCU8kKpx1e-HGLi3d_TIxUAR_I7LRAX1q3mmz6S-sH1gBMK46nff6z8UUzYezbp5wnfr1kRgDBJ82eCasZaEz3FrW8ak1Kr4hedaQney8tk1oJCBj2MpCi-90fLtiFLswvZUUkVVM-9ZaUwmfBczurckmwUu0CJPqQoi-xOEE_j6WwF7xLgbTyixHFaT6hx43GNW7oNIAIK2oMLdAAIB-kpVYEKrcz9PwIek6S8pNkLx2GPHUUyPfV_jHJdPNJVxqzblslmbVUMMxzJ8zaS4lRndd_vUpoH0WO9TADsrRBAUMHy7Xz2JPq7w79foOgfEK-YKG9D2q0WPi-OLWoXWmejGnDSwq4Ait3h9wGm600oZjZjAtC-J_r3MjQub7vn0G3TFo8te3DE5MqYwUjr-TcZtDTCYSxzuZyw6QgvkwtXNzbwbFzZTJklsxJQ1OVWPkhRE4OBKZw0tAjg6SO27G_EvlS3SfLmphqGcYGxMOfej9q-y8Z6cdvIuXxocqVtSaLr-L8uNjUsDzVHlCs23WLL6oBEnzL93r6&x-client-SKU=ID_NET6_0&x-client-ver=8.11.0.0&sso_reload=true" class="btn-login">Iniciar sesión</a>
                         </li>
                     </ul>
                 </nav>
 
                 <div class="header-actions">
-                    <button class="translate-btn" aria-label="Traducir">
-                        <a href="../../Translate/Servicios/enServicio2.html"><i class="fa-solid fa-globe"></i></a>
-                    </button>
+                    <a href="../../Translate/Servicios/enServicio2.html" class="translate-btn" aria-label="Traducir">
+                        <i class="fa-solid fa-globe"></i>
+                        <span>ES</span>
+                    </a>
 
                     <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
                         <svg class="sun-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -163,7 +163,7 @@
                         <a href="https://www.facebook.com/fullservicesingenieria/?ref=pages_you_manage" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/fullservicessas/" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/company/full-services-sas" aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="#" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://wa.link/mi5n03" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="https://www.youtube.com/channel/UCM24jb9IC27P_QPR2GwM6fw"><i class="fa-brands fa-youtube"></i></a>
                         <a href="https://beacons.ai/fullservicesingenieria"><i class="fa-solid fa-link"></i></a>
                     </div>
@@ -172,20 +172,20 @@
                 <div class="footer-col">
                     <h4 class="footer-heading">Servicios</h4>
                     <ul class="footer-links">
-                        <li><a href="../../index.html">Work-Over</a></li>
-                        <li><a href="../../index.html">Trailers</a></li>
-                        <li><a href="../../index.html">Obras Civiles</a></li>
-                        <li><a href="../../index.html">Arquitectura</a></li>
-                        <li><a href="../../index.html">Transporte</a></li>
-                        <li><a href="../../index.html">Servicios Industriales</a></li>
+                        <li><a href="../../index.html#servicios">Work-Over</a></li>
+                        <li><a href="../../index.html#servicios">Trailers</a></li>
+                        <li><a href="../../index.html#servicios">Obras Civiles</a></li>
+                        <li><a href="../../index.html#servicios">Arquitectura</a></li>
+                        <li><a href="../../index.html#servicios">Transporte</a></li>
+                        <li><a href="../../index.html#servicios">Servicios Industriales</a></li>
                     </ul>
                 </div>
                 
                 <div class="footer-col">
                     <h4 class="footer-heading">Empresa</h4>
                     <ul class="footer-links">
-                        <li><a href="../../index.html">Sobre Nosotros</a></li>
-                        <li><a href="../../index.html">Contacto</a></li>
+                        <li><a href="../../index.html#nosotros">Sobre Nosotros</a></li>
+                        <li><a href="../../index.html#contacto">Contacto</a></li>
                         <li><a href="../../Templates/formwork.html">Trabaja con Nosotros</a></li>
                         <li><a href="../../blog.html">Blog</a></li>
                         <li><a href="../../Templates/HSEQ.html">HSEQ</a></li>
