--- a/Templates/politicas.html
+++ b/Templates/politicas.html
@@ -30,9 +30,9 @@
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
                         <li><a href="../index.html" class="nav-link"><span>Inicio</span></a></li>
-                        <li><a href="../index.html" class="nav-link"><span>Nosotros</span></a></li>
-                        <li><a href="../index.html" class="nav-link"><span>Servicios</span></a></li>
-                        <li><a href="../index.html" class="nav-link"><span>Contacto</span></a></li>
+                        <li><a href="../index.html#nosotros" class="nav-link"><span>Nosotros</span></a></li>
+                        <li><a href="../index.html#servicios" class="nav-link"><span>Servicios</span></a></li>
+                        <li><a href="../index.html#contacto" class="nav-link"><span>Contacto</span></a></li>
                         <li><a href="../blog.html" class="nav-link"><span>Blog</span></a></li>
 
 
@@ -43,9 +43,10 @@
                 </nav>
 
                 <div class="header-actions">
-                    <button class="translate-btn" aria-label="Traducir">
-                        <a href="../Translate/enPoliticas.html"><i class="fa-solid fa-globe"></i></a>
-                    </button>
+                    <a href="../Translate/enPoliticas.html" class="translate-btn" aria-label="Traducir">
+                        <i class="fa-solid fa-globe"></i>
+                        <span>ES</span>
+                    </a>
 
                     <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
                         <svg class="sun-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -188,20 +189,20 @@
                 <div class="footer-col">
                     <h4 class="footer-heading">Servicios</h4>
                     <ul class="footer-links">
-                        <li><a href="../index.html">Work-Over</a></li>
-                        <li><a href="../index.html">Trailers</a></li>
-                        <li><a href="../index.html">Obras Civiles</a></li>
-                        <li><a href="../index.html">Arquitectura</a></li>
-                        <li><a href="../index.html">Transporte</a></li>
-                        <li><a href="../index.html">Servicios Industriales</a></li>
+                        <li><a href="../index.html#servicios">Work-Over</a></li>
+                        <li><a href="../index.html#servicios">Trailers</a></li>
+                        <li><a href="../index.html#servicios">Obras Civiles</a></li>
+                        <li><a href="../index.html#servicios">Arquitectura</a></li>
+                        <li><a href="../index.html#servicios">Transporte</a></li>
+                        <li><a href="../index.html#servicios">Servicios Industriales</a></li>
                     </ul>
                 </div>
                 
                 <div class="footer-col">
                     <h4 class="footer-heading">Empresa</h4>
                     <ul class="footer-links">
-                        <li><a href="../index.html">Sobre Nosotros</a></li>
-                        <li><a href="../index.html">Contacto</a></li>
+                        <li><a href="../index.html#nosotros">Sobre Nosotros</a></li>
+                        <li><a href="../index.html#contacto">Contacto</a></li>
                         <li><a href="../Templates/formwork.html">Trabaja con Nosotros</a></li>
                         <li><a href="../blog.html">Blog</a></li>
                         <li><a href="../Templates/HSEQ.html">HSEQ</a></li>
