--- a/Templates/Servicios/Trailers3.html
+++ b/Templates/Servicios/Trailers3.html
@@ -2,8 +2,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cama Baja Cuello Hidraulico</title>
-    <meta name="description" content="Full Services - Prestamos servicios que integran el sector petrolero, industrial, civil y arquitectónico logrando el mejoramiento y progreso continuo.">
- <link rel="icon" type="image/x-icon" href="../../Static/Images/FULL-LOGO.ico">
+    <meta name="description" content="Full Services - Ofrecemos soluciones integrales en los sectores petrolero, civil, industrial y arquitectónico con personal especializado y tecnología de punta.">
+    <link rel="icon" type="image/x-icon" href="../../Static/Images/FULL-LOGO.ico">
     <link rel="stylesheet" href="../../Static/Styles/styles.css">
     <link rel="stylesheet" href="../../Static/Styles/responsive.css">
     <link rel="stylesheet" href="../../Static/Styles/darkmode.css">
