--- a/Templates/formwork.html
+++ b/Templates/formwork.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabaja con Nosotros S&J Full Services S.A.S</title>
-    <meta name="description" content="Full Services - Únete a un equipo comprometido con la innovación, la seguridad y la excelencia en los sectores petrolero, civil e industrial.">
+    <meta name="description" content="Full Services - Únete a un equipo comprometido con la innovación, la seguridad y la excelencia en los sectores petroleros, civil e industrial.">
     <link rel="icon" type="image/x-icon" href="../Static/Images/FULL-LOGO.ico">
     <link rel="stylesheet" href="../Static/Styles/styles.css">
     <link rel="stylesheet" href="../Static/Styles/responsive.css">
