--- a/Static/Styles/responsive.css
+++ b/Static/Styles/responsive.css
@@ -565,7 +565,7 @@
     .horario-section {
         padding: 120px 15px;
         background-size: cover;
-        background-position: center 55%; /* ajusta el fondo un poco más abajo */
+        background-position: center 55%; 
     }
 
     .horario-card {
@@ -608,5 +608,20 @@
 
     .horario-card {
         padding: 25px 18px;
+    }
+}
+
+@media (max-width: 768px) {
+    body.dark-mode .horario-section {
+        padding: 120px 15px;
+        background-size: cover;
+        background-position: center 55%;
+    }
+}
+
+@media (max-width: 480px) {
+    body.dark-mode .horario-section {
+        padding: 100px 10px;
+        background-position: center 65%;
     }
 }
